@@ -7,6 +7,10 @@ Revision history for Perl extension FSA::Rules.
       - Added at() method. Implmentation by Curtis Poe.
       - Simplified synopsis by Curtis Poe.
       - Added "state_class" parameter to simplify subclassing FSA::State.
+      - A rule defined as a false scalar value, rather than a code reference,
+        now works properly.
+      - A successful attempt to switch states with the "strict" attribute
+        enabled now succeeds if no other rules evaluate to true.
 
 0.10  2004-12-17T23:29:54
       - Moved state-specific methods to new FSA::State class. This is a
